Add Database Models using code first workflow

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    //Connection String to Database
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=VIETHUNG\\MSSQLSERVER01;Database=PBL3;Trusted_Connection=True"
     }
-  },
-  "AllowedHosts": "*"
 }
