Finish Web Authencation and Add ClassroomController

--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=PBL3;Trusted_Connection=True"
+  },
+  "AppSettings": {
+  "Token": "my top secret key"
   }
 }
