Remove appsettings.json

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 Properties/PublishProfiles/
 Properties/ServiceDependencies/
 Properties/serviceDependencies*
+
+appsettings.json
