--- a/API/API/appsettings.Development.json
+++ b/API/API/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=PBL3;Trusted_Connection=True",
+    "Azure": "Data Source=<database server hostname>;Initial Catalog=PBL3;Persist Security Info=True;User ID=<user>;Password=<password>"
+  },
+  "AppSettings": {
+    "Token": "<JWT secret key>"
   }
 }
