--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=PBL3;Trusted_Connection=True",
-    "Azure": "Data Source=pbl3.database.windows.net;Initial Catalog=PBL3;Persist Security Info=True;User ID=psycholog1st;Password=KzJK5GML4iq7gUf"
+    "Azure": "Data Source=pbl3.database.windows.net;Initial Catalog=PBL3;Persist Security Info=True;User ID=psycholog1st;Password=<>"
   },
   "AppSettings": {
     "Token": "my top secret key"
