--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -23,4 +23,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+	  	  <Folder Include="wwwroot\" />
+	  	  <Folder Include="wwwroot\Upload\" />
+  </ItemGroup>
+
 </Project>
