--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -9,7 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.17.0" />
-    <PackageReference Include="IronXL.Excel" Version="2022.3.0" />
+    <PackageReference Include="EPPlus" Version="6.0.4" />
+    <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.8" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
